add clientId field to tms-auth
