# backend/src/tms/tms.schema.ts
@@ -4,6 +4,7 @@ const tmsAuthSchema = [
   body('_rid').isString(),
   body('_aid').isString(),
   body('xsrfToken').isString(),
+  body('clientId').isString(),
 ];
 
 export { tmsAuthSchema };
