# backend/swagger.json
@@ -370,6 +370,10 @@
           "type": "string",
           "example": "1200"
         },
+        "clientId": {
+          "type": "string",
+          "example": "1200"
+        },
         "createdAt": {
           "type": "string",
           "example": "string"
